// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj bQtYEt"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS fhtcMs"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS eQKBeb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS dYIKol"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj gwyQTN"
      size="small"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS iGFtcV"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS gjTlji"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS bmHiaU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button MD 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS fhtcMs"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS fhtcMs"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS eQKBeb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS fhtcMs"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS eQKBeb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS dYIKol"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS fhtcMs"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS dYIKol"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS eQKBeb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS eQKBeb"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="medium"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS dYIKol"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS iGFtcV"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS iGFtcV"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS gjTlji"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS iGFtcV"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS gjTlji"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS bmHiaU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS iGFtcV"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS bmHiaU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS gjTlji"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-hZiMVj iSzmpX"
    >
      <div
        className="sc-dDaJoQ qwkvz"
      >
        <div
          className="sc-cbDwiu bcJVNH"
        >
          <button
            className="sc-dOaiCS gjTlji"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            size="small"
          >
            Button
            <div
              className="sc-jdzWJC ifPczp"
            />
          </button>
        </div>
      </div>
      <div
        className="sc-cbDwiu bcJVNH"
      >
        <button
          className="sc-dOaiCS bmHiaU"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="small"
        >
          Button
          <div
            className="sc-jdzWJC ifPczp"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
